# anylang

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  macro.rs  parse.rs
src/parser/: json.rs  mod.rs
tests/: test.rs
tests/lang/: de_DE.json  en_US.json  ru_BY.json  ru_RU.json
