[package]
name = "anylang"
version = "0.0.1"
edition = "2024"
authors = ["puffy_with_eyes"]
repository = "https://github.com/PuffyWithEyes/anylang"
license = "MIT"
description = "Crate for generating constants with values at compile time "

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
serde_json = { version = "1.0", optional = true }
proc-macro2 = "1.0"


[features]
default = ["json"]
json = ["serde_json"]
